--- a/.gitignore
+++ b/.gitignore
@@ -297,7 +297,7 @@ typings/
 # dotenv environment variables file
 .env
 
-!platform-software/
+!platform-software/*
 !platform-software/apache-maven-3.6.3/*
 !platform-software/apache-maven-3.6.3/bin/*
 !platform-software/apache-maven-3.6.3/boot/*
@@ -305,3 +305,5 @@ typings/
 !platform-software/apache-maven-3.6.3/conf/logging*
 !platform-software/apache-maven-3.6.3/lib/*
 !platform-software/apache-maven-3.6.3/lib/ext/*
+
+!platform-software/java-1.8.0/*
