--- a/.gitignore
+++ b/.gitignore
@@ -310,9 +310,10 @@ typings/
 !platform-software/java-1.8.0/jre/*
 !platform-software/java-1.8.0/jre/bin/*
 !platform-software/java-1.8.0/jre/lib/*
+!platform-software/java-1.8.0/jre/lib/applet
+!platform-software/java-1.8.0/jre/lib/ext/*
 !platform-software/java-1.8.0/lib/*
-!platform-software/java-1.8.0/lib/applet/*
-!platform-software/java-1.8.0/lib/ext/*
+C:\Users\User\Downloads\java-1.8.0-openjdk-1.8.0.275-1.b01.redhat.windows.x86_64\jre\lib\ext
 !platform-software/java-1.8.0/lib/security/policy/*
 !platform-software/java-1.8.0/missioncontrol/*
 !platform-software/java-1.8.0/missioncontrol/p2/*
@@ -320,6 +321,7 @@ typings/
 !platform-software/java-1.8.0/missioncontrol/p2/org.eclipse.equinox.p2.engine/.settings
 !platform-software/java-1.8.0/missioncontrol/p2/org.eclipse.equinox.p2.engine/.settings/*
 !platform-software/java-1.8.0/missioncontrol/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data
+!platform-software/java-1.8.0/missioncontrol/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/*
 !platform-software/java-1.8.0/missioncontrol/plugins/*
 !platform-software/java-1.8.0/webstart/*
 
